finished footer and added pop up

--- a/index.html
+++ b/index.html
@@ -74,6 +74,36 @@
       <a href="#projects" class="scroll">
          <div class="scroll__icon click"></div>
       </a>
+      <div class="model">
+         <div class="model__half model__about">
+            <h3 class="model__title model__title--about">Here's a bit about me!</h3>
+            <h4 class="model__sub-title model__sub-title--about">Frontend software engineer.</h4>
+            <p class="model__para">
+               Im a 31 year old <b class="orange">frontend software Engineer</b> with a strong passion for developing websites with great <b class="orange">user exsperiences</b>.
+               <br>
+               I currently work on extremely difficult engineering problems and learn from a team consisting od some of the most <b class="orange">talented</b> and <b class="orange">exsperienced</b> software engineers every day. 
+            </p>
+            <div class="model__languages">
+               <figure class="model__language">
+                  <img class="model__language--img" src="https://img.freepik.com/free-icon/html5_318-903450.jpg?w=360" alt="">
+                  <span class="language__name">HTML</span>
+               </figure>
+               <figure class="model__language">
+                  <img class="model__language--img" src="https://cdn.icon-icons.com/icons2/2415/PNG/512/css_plain_logo_icon_146573.png" alt="">
+                  <span class="language__name">CSS</span>
+               </figure>
+               <figure class="model__language">
+                  <img class="model__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/600px-JavaScript-logo.png?20120221235433" alt="">
+                  <span class="language__name">Java</span>
+               </figure>
+               <figure class="model__language">
+                  <img class="model__language--img" src="https://ionicframework.com/docs/icons/logo-react-icon.png" alt="">
+                  <span class="language__name">React</span>
+               </figure>
+            </div>
+         </div>
+         <div class="model__half model__contact">Lets have a chat!</div>
+      </div>
    </section>
    <section id="projects">
       <div class="container">
@@ -128,38 +158,41 @@
    </section>
    <footer>
       <div class="container">
-         <figure>
-            <img src="./assets/logo.svg" alt="">
-         </figure>
-         <div class="footer__social--list">
-            <a href="" class="
-               footer__social--link
-               liver__hover-effect
-               liver__hover-effect--white
-            ">
-               GitHub
-            </a>
-            <a href="" class="
-               footer__social--link
-               liver__hover-effect
-               liver__hover-effect--white
-            ">
-               LinkedIn
-            </a>
-            <a href="" class="
-               footer__social--link
-               liver__hover-effect
-               liver__hover-effect--white
-            ">
-               Email
-            </a>
-            <a href="" class="
-               footer__social--link
-               liver__hover-effect
-               liver__hover-effect--white
-            ">
-               Resume
-            </a>
+         <div class="row footer__row">
+            <figure>
+               <img class="footer__img" src="./assets/logo.svg" alt="">
+            </figure>
+            <div class="footer__social--list">
+               <a href="" class="
+                  footer__social--link
+                  link__hover-effect
+                  link__hover-effect--white
+               ">
+                  GitHub
+               </a>
+               <a href="" class="
+                  footer__social--link
+                  link__hover-effect
+                  link__hover-effect--white
+               ">
+                  LinkedIn
+               </a>
+               <a href="" class="
+                  footer__social--link
+                  link__hover-effect
+                  link__hover-effect--white
+               ">
+                  Email
+               </a>
+               <a href="" class="
+                  footer__social--link
+                  link__hover-effect
+                  link__hover-effect--white
+               ">
+                  Resume
+               </a>
+            </div>
+            <div class="footer__copyright">Copyright © 2023 Lance Wooley</div>
          </div>
       </div>
    </footer>
