--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
+   <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script src="index.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("rJeubM889V0KM5C2W");
+   })();
+</script>
+
    <script src="https://kit.fontawesome.com/dbe21d6795.js" crossorigin="anonymous"></script>
+   
    <title>Lance Wooley</title>
 </head>
 <body>
@@ -89,7 +100,7 @@
                   <span class="language__name">HTML</span>
                </figure>
                <figure class="model__language">
-                  <img class="model__language--img" src="https://cdn.icon-icons.com/icons2/2415/PNG/512/css_plain_logo_icon_146573.png" alt="">
+                  <img class="model__language--img" src="https://w7.pngwing.com/pngs/241/797/png-transparent-cascading-style-sheets-css3-javascript-logo-world-wide-web-blue-angle-text-thumbnail.png" alt="">
                   <span class="language__name">CSS</span>
                </figure>
                <figure class="model__language">
@@ -102,7 +113,42 @@
                </figure>
             </div>
          </div>
-         <div class="model__half model__contact">Lets have a chat!</div>
+         <div class="model__half model__contact">
+            <h3 class="model__title model__title--contact">
+               Lets have a chat.
+            </h3>
+            <h3 class="model__sub-title model__sub-title--contact">
+               I'm currently open to new opportunities.
+            </h3>
+            <form id="contact__form" onsubmit="contact(event)">
+               <div class="form__item">
+                  <label class="form__item--label"><span class="orange">*</span> Name</label>
+                  <input class="input" name="user_name" type="text" ></input>
+               </div>
+            </form>
+            <form id="contact__form" >
+               <div class="form__item">
+                  <label class="form__item--label"><span class="orange">*</span> E-mail</label>
+                  <input class="input" name="user_email" type="email" ></input>
+               </div>
+            </form>
+            <form id="contact__form" action="">
+               <div class="form__item">
+                  <label class="form__item--label"><span class="orange">*</span> Message</label>
+                  <textarea class="input" name="message" type="text" ></textarea>
+               </div>
+               <button id="contact__submit" class="form__submit">
+                  Send it my way.
+               </button>
+            </form>
+            <div class="model__overlay model__overlay--loading">
+               <i class="fas fa-spinner"></i>
+            </div>
+            <div class="model__overlay model__overlay--success">
+               Thanks for the message! Looking forward to speaking with you soon!
+            </div>
+         </div>
+         <i class="fas fa-times model__exit click"></i>
       </div>
    </section>
    <section id="projects">
