--- a/index.html
+++ b/index.html
@@ -4,23 +4,28 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
    <link rel="stylesheet" href="./styles.css">
+
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
-   <script src="https://kit.fontawesome.com/dbe21d6795.js" crossorigin="anonymous"></script>
 
+   <script src="https://kit.fontawesome.com/dbe21d6795.js" crossorigin="anonymous"></script>
    </script>
+
    <script src="index.js"></script>
    
    <script type="text/javascript"
    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-</script>
-<script type="text/javascript">
-(function(){
- emailjs.init("rJeubM889V0KM5C2W");
-})();
-</script>
+   </script>
+
+   <script type="text/javascript">
+   (function(){
+   emailjs.init("rJeubM889V0KM5C2W");
+   })();
+   </script>
+
    <title>Lance Wooley</title>
 </head>
 
@@ -71,19 +76,19 @@
          <p>
             <div class="social__list">
                <a href="" class="social__link click">
-                  <i class="fa-brands fa-linkedin-in"></i>
+                  <i class="fa-brands fa-linkedin"></i>
                </a>
                <a href="" class="social__link click">
-                  <i class="fa-regular fa-file-pdf"></i>
+                  <i class="fa-solid fa-file"></i>
                </a>
                <a href="" class="social__link click">
-                  <i class="fab fa-github"></i>
+                  <i class="fa-brands fa-github"></i>
                </a>
             </div>
       </header>
       <a href="#">
       <button class="mail__btn click" onclick="toggleModel()">
-         <i class="fa-regular fa-envelope"></i>
+         <i class="fa-solid fa-envelope"></i>
       </button>
       </a>
       <a href="#projects" class="scroll">
@@ -174,15 +179,15 @@
             <ul class="project__list">
                <li class="project">
                   <div class="project__wrapper">
-                     <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                     <img src="./assets/PICTIME-1-1024x640.png" class="project__img" alt="">
                      <div class="project__wrapper--bg"></div>
                      <div class="project__description">
-                        <h3 class="project__description--title">Car Sales Projects</h3>
+                        <h3 class="project__description--title">Photographer Website</h3>
                         <h4 class="project__description--sub-title">Html, CSS, JavaScript</h4>
-                        <p class="project__description--para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta dolorem itaque unde nobis voluptatibus, amet quam vel expedita. Alias provident doloremque explicabo ut, repellat et dolores! Libero laborum reprehenderit sed.</p>
+                        <p class="project__description--para">Check out this website I made for my photographer wife! I started this as a simple upgrade for her and scaled it into what it is today over time!</p>
                         <div class="project__description--links">
-                           <a href="#" class="project__description--links">
-                              <i class="fa-brands fa-github"></i>
+                           <a href="https://hwphotography.netlify.app/" target="_blank" class="project__description--links">
+                              <i class="fa-solid fa-camera"></i>
                            </a>
                            <a href="#" class="project__description--links">
                               <i class="fa-brands fa-linkedin-in"></i>
