--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <header class="header">
          <h1 class="title">Hey</h1>
          <h1 class="title title--secondary">I'm Lance.</h1>
-         <p class="header__para">I'm a <b class="orange"> Frontend Software Engineer</b> with a strong passion for building web applications with great user exsperiences.
+         <p class="header__para">I'm a <b class="orange"> Frontend Software Engineer</b> with a strong passion for building web applications with great user experiences.
             <br>
             Here's a bit more <b class="orange click" onclick="toggleModel()">about me.</b>
          <p>
@@ -99,9 +99,9 @@
             <h3 class="model__title model__title--about">Here's a bit about me!</h3>
             <h4 class="model__sub-title model__sub-title--about">Frontend software engineer.</h4>
             <p class="model__para">
-               Im a 31 year old <b class="orange">frontend software Engineer</b> with a strong passion for developing websites with great <b class="orange">user exsperiences</b>.
+               Im a 31 year old <b class="orange">frontend software Engineer</b> with a strong passion for developing websites with great <b class="orange">user experiences</b>.
                <br>
-               I currently work on extremely difficult engineering problems and learn from a team consisting od some of the most <b class="orange">talented</b> and <b class="orange">exsperienced</b> software engineers every day. 
+               I currently work on extremely difficult engineering problems and learn from a team consisting of some of the most <b class="orange">talented</b> and <b class="orange">exsperienced</b> software engineers every day. 
             </p>
             <div class="model__languages">
                <figure class="model__language">
