--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
 
-   <script src="https://kit.fontawesome.com/dbe21d6795.js" crossorigin="anonymous"></script>
-   </script>
+   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 
    <script src="index.js"></script>
    
@@ -33,7 +32,7 @@
    <section id="landing-page" onmousemove="moveBackground(event)">
       <nav>
          <figure>
-            <img class="personal__logo" src="./assets/logo.svg" alt="">
+            <img class="personal__logo" src="./assets/Gold Luxury Initial Circle Logo.png" alt="">
          </figure>
          <ul class="nav__link--list" >
             <li class="nav__link" onclick="toggleModel()">
@@ -224,7 +223,7 @@
       <div class="container">
          <div class="row footer__row">
             <figure>
-               <img  class="footer__img" src="./assets/logo.svg" alt="">
+               <img  class="footer__img" src="./assets/Gold Luxury Initial Circle Logo.png" alt="">
             </figure>
             <div class="footer__social--list">
                <a href="" target="_blank" class="
