--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
 
-   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+   <script src="https://kit.fontawesome.com/dbe21d6795.js" crossorigin="anonymous"></script>
 
    <script src="index.js"></script>
    
@@ -79,7 +79,7 @@
                <a href="" class="social__link click">
                   <i class="fa-solid fa-file"></i>
                </a>
-               <a href="" class="social__link click">
+               <a href="https://github.com/Locklear66" target="_blank" class="social__link click">
                   <i class="fa-brands fa-github"></i>
                </a>
             </div>
@@ -132,8 +132,7 @@
                <div class="form__item">
                   <label class="form__item--label"><span class="orange">*</span> Name</label>
                   <input class="input" name="user_name" type="text" ></input>
-               </div>
-           
+               </div>   
            
                <div class="form__item">
                   <label class="form__item--label"><span class="orange">*</span> E-mail</label>
@@ -201,9 +200,9 @@
                      <img src="./assets/blinker mockup.png" class="project__img" alt="">
                      <div class="project__wrapper--bg"></div>
                      <div class="project__description">
-                        <h3 class="project__description--title">Car Sales Projects</h3>
+                        <h3 class="project__description--title">Movie Search Engine</h3>
                         <h4 class="project__description--sub-title">Html, CSS, JavaScript</h4>
-                        <p class="project__description--para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta dolorem itaque unde nobis voluptatibus, amet quam vel expedita. Alias provident doloremque explicabo ut, repellat et dolores! Libero laborum reprehenderit sed.</p>
+                        <p class="project__description--para">Here is a movie search engine I built form the ground up! Utilizing  the omdbapi you can enter any movie name you want to search up and it will find it for you!</p>
                         <div class="project__description--links">
                            <a href="#" class="project__description--links">
                               <i class="fa-brands fa-github"></i>
