updated github link

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                ">
                   GitHub
                </a>
-               <a href="" class="
+               <a href="https://github.com/Locklear66" class="
                   footer__social--link
                   link__hover-effect
                   link__hover-effect--white
@@ -246,7 +246,7 @@
                ">
                   Contact
                </a>
-               <a href="" target="_blank" class="
+               <a href="#" target="_blank" class="
                   footer__social--link
                   link__hover-effect
                   link__hover-effect--white
