--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <h4 class="project__description--sub-title">Html, CSS, JavaScript</h4>
                         <p class="project__description--para">Here is a movie search engine I built form the ground up! Utilizing  the omdbapi you can enter any movie name you want to search up and it will find it for you!</p>
                         <div class="project__description--links">
-                           <a href="https://locklear66.github.io/Movie-Search-Engine/" class="project__description--links">
+                           <a href="https://movieviewfinder.netlify.app" class="project__description--links">
                               <i class="fa-brands fa-github"></i>
                            </a>
                            <a href="#" class="project__description--links">
