--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    <section id="landing-page" onmousemove="moveBackground(event)">
       <nav>
          <figure>
-            <img class="personal__logo" src="./assets/Gold Luxury Initial Circle Logo.png" alt="">
+            <img class="personal__logo" src="./assets/Gold_Luxury_Initial_Circle_Logo-removebg-preview.png" alt="">
          </figure>
          <ul class="nav__link--list" >
             <li class="nav__link" onclick="toggleModel()">
@@ -184,7 +184,7 @@
                         <p class="project__description--para">Check out this website I made for my photographer wife! I started this as a simple upgrade for her and scaled it into what it is today over time!</p>
                         <div class="project__description--links">
                            <a href="https://hwphotography.netlify.app/" target="_blank" class="project__description--links">
-                              <i class="fa-solid fa-camera"></i>
+                              <i class="fa-brands fa-github"></i>
                            </a>
                            <a href="#" class="project__description--links">
                               <i class="fa-brands fa-linkedin-in"></i>
@@ -222,7 +222,7 @@
       <div class="container">
          <div class="row footer__row">
             <figure>
-               <img  class="footer__img" src="./assets/Gold Luxury Initial Circle Logo.png" alt="">
+               <img  class="footer__img" src="./assets/Gold_Luxury_Initial_Circle_Logo-removebg-preview.png" alt="">
             </figure>
             <div class="footer__social--list">
                <a href="" target="_blank" class="
