added gradient color to the logo and fixed the ViewFinder logo

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <p class="project__description--para">Check out this website I made for my photographer wife! I started this as a simple upgrade for her and scaled it into what it is today over time!</p>
                         <div class="project__description--links">
                            <a href="https://hwphotography.netlify.app/" target="_blank" class="project__description--links">
-                              <i class="fa-brands fa-github"></i>
+                              <i class="fa-solid fa-link"></i>
                            </a>
                            <a href="#" class="project__description--links">
                               <i class="fa-brands fa-linkedin-in"></i>
@@ -197,15 +197,16 @@
             <ul class="project__list">
                <li class="project">
                   <div class="project__wrapper">
-                     <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                     <img src="./assets/large-A-wHFZi3x-transformed-removebg-preview.png" class="project__img" alt="">
                      <div class="project__wrapper--bg"></div>
                      <div class="project__description">
-                        <h3 class="project__description--title">Movie Search Engine</h3>
-                        <h4 class="project__description--sub-title">Html, CSS, JavaScript</h4>
-                        <p class="project__description--para">Here is a movie search engine I built form the ground up! Utilizing  the omdbapi you can enter any movie name you want to search up and it will find it for you!</p>
+                        <h3 class="project__description--title">View Finder</h3>
+                        <h4 class="project__description--sub-title">Movie Search Engine</h4>
+                        <p class="project__description--para">Here is a movie search engine I built form the ground up! Utilizing  the omdbapi you can enter any movie name you want to search up and it will find it for you! 
+                           <b>Built with Html, CSS, JavaScript!</b></p>
                         <div class="project__description--links">
                            <a href="https://movieviewfinder.netlify.app" class="project__description--links">
-                              <i class="fa-brands fa-github"></i>
+                              <i class="fa-solid fa-link"></i>
                            </a>
                            <a href="#" class="project__description--links">
                               <i class="fa-brands fa-linkedin-in"></i>
