added gradient color to the logo and fixed the ViewFinder logo

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <p class="project__description--para">Here is a movie search engine I built form the ground up! Utilizing  the omdbapi you can enter any movie name you want to search up and it will find it for you! 
                            <b>Built with Html, CSS, JavaScript!</b></p>
                         <div class="project__description--links">
-                           <a href="https://movieviewfinder.netlify.app" class="project__description--links">
+                           <a target="_blank" href="https://movieviewfinder.netlify.app" class="project__description--links">
                               <i class="fa-solid fa-link"></i>
                            </a>
                            <a href="#" class="project__description--links">
