Updates and link fixes

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             Here's a bit more <b class="orange click" onclick="toggleModel()">about me.</b>
          <p>
             <div class="social__list">
-               <a href="" class="social__link click">
+               <a href="https://www.linkedin.com/in/lance-wooley-a8106a188" target="_blank" class="social__link click">
                   <i class="fa-brands fa-linkedin"></i>
                </a>
-               <a href="" class="social__link click">
+               <a href="https://my.indeed.com/p/lancew-35vwjyn" target="_blank" class="social__link click">
                   <i class="fa-solid fa-file"></i>
                </a>
                <a href="https://github.com/Locklear66" target="_blank" class="social__link click">
@@ -97,9 +97,9 @@
             <h3 class="model__title model__title--about">Here's a bit about me!</h3>
             <h4 class="model__sub-title model__sub-title--about">Frontend software engineer.</h4>
             <p class="model__para">
-               Im a 31 year old <b class="orange">frontend software Engineer</b> with a strong passion for developing websites with great <b class="orange">user experiences</b>.
+               Im a <b class="orange">Frontend Software Engineer</b> with a strong passion for developing websites with great <b class="orange">user experiences</b>.
                <br>
-               I currently work on extremely difficult engineering problems and learn from a team consisting of some of the most <b class="orange">talented</b> and <b class="orange">exsperienced</b> software engineers every day. 
+               I currently work on difficult engineering problems and learn from a team consisting of some of the most <b class="orange">talented</b> and <b class="orange">exsperienced</b> software engineers every day. 
             </p>
             <div class="model__languages">
                <figure class="model__language">
@@ -180,13 +180,13 @@
                      <div class="project__wrapper--bg"></div>
                      <div class="project__description">
                         <h3 class="project__description--title">Photographer Website</h3>
-                        <h4 class="project__description--sub-title">Html, CSS, JavaScript</h4>
-                        <p class="project__description--para">Check out this website I made for my photographer wife! I started this as a simple upgrade for her and scaled it into what it is today over time!</p>
+                        <h4 class="project__description--sub-title"></h4>
+                        <p class="project__description--para">Website for Photographers utilizing technologies such as HTML5, CSS3, and JavaScript. Fully optimized for both large and small screens.   </p>
                         <div class="project__description--links">
                            <a href="https://hwphotography.netlify.app/" target="_blank" class="project__description--links">
                               <i class="fa-solid fa-link"></i>
                            </a>
-                           <a href="#" class="project__description--links">
+                           <a href="https://www.linkedin.com/in/lance-wooley-a8106a188" target="_blank" class="project__description--links">
                               <i class="fa-brands fa-linkedin-in"></i>
                            </a>
                         </div>
@@ -202,13 +202,13 @@
                      <div class="project__description">
                         <h3 class="project__description--title">View Finder</h3>
                         <h4 class="project__description--sub-title">Movie Search Engine</h4>
-                        <p class="project__description--para">Here is a movie search engine I built form the ground up! Utilizing  the omdbapi you can enter any movie name you want to search up and it will find it for you! 
-                           <b>Built with Html, CSS, JavaScript!</b></p>
+                        <p class="project__description--para">Search any movie you want with View Finder. Utilizing the omdbapi you can enter any movie name you want to search and it will find it for you! 
+                            <br>HTML5, CSS3, JavaScript</br></p>
                         <div class="project__description--links">
                            <a target="_blank" href="https://movieviewfinder.netlify.app" class="project__description--links">
                               <i class="fa-solid fa-link"></i>
                            </a>
-                           <a href="#" class="project__description--links">
+                           <a href="https://www.linkedin.com/in/lance-wooley-a8106a188" target="_blank" class="project__description--links">
                               <i class="fa-brands fa-linkedin-in"></i>
                            </a>
                         </div>
@@ -226,28 +226,28 @@
                <img  class="footer__img" src="./assets/Gold_Luxury_Initial_Circle_Logo-removebg-preview.png" alt="">
             </figure>
             <div class="footer__social--list">
-               <a href="" target="_blank" class="
+               <a href="https://github.com/Locklear66" target="_blank" class="
                   footer__social--link
                   link__hover-effect
                   link__hover-effect--white
                ">
                   GitHub
                </a>
-               <a href="https://github.com/Locklear66" class="
+               <a href="https://www.linkedin.com/in/lance-wooley-a8106a188" target="_blank" class="
                   footer__social--link
                   link__hover-effect
                   link__hover-effect--white
                ">
                   LinkedIn
                </a>
-               <a href="#" target="_blank" onclick="toggleModel()" class="
+               <a href="#contact" target="_blank" onclick="toggleModel()" class="
                   footer__social--link
                   link__hover-effect
                   link__hover-effect--white
                ">
                   Contact
                </a>
-               <a href="#" target="_blank" class="
+               <a href="https://my.indeed.com/p/lancew-35vwjyn" target="_blank" class="
                   footer__social--link
                   link__hover-effect
                   link__hover-effect--white
