Updates and link fixes

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
             <p class="model__para">
                Im a <b class="orange">Frontend Software Engineer</b> with a strong passion for developing websites with great <b class="orange">user experiences</b>.
                <br>
-               I currently work on difficult engineering problems and learn from a team consisting of some of the most <b class="orange">talented</b> and <b class="orange">exsperienced</b> software engineers every day. 
+               I currently work at my day job and study <b class="orange">Web Development</b> at night.
+               My work ethic is my greatest strength. Taught from a young age to always follow through and never quit a project. I have worked the better part of my life on a different career and now its time for a change. Putting myself through Web Development school has been hard but very rewarding. <br><b class="orange">I would love to work with you on your next project! </b></br>
             </p>
             <div class="model__languages">
                <figure class="model__language">
