--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <ul class="project__list">
                <li class="project">
                   <div class="project__wrapper">
-                     <img src="./assets/large-A-wHFZi3x-transformed-removebg-preview.png" class="project__img" alt="">
+                     <img src="https://images.unsplash.com/photo-1485846234645-a62644f84728?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG8lMjBmb3IlMjBhJTIwbW92aWUlMjBzZWFyY2glMjBlbmdpbmV8ZW58MHx8MHx8&auto=format&fit=crop&w=1200&q=60" class="project__img" alt="">
                      <div class="project__wrapper--bg"></div>
                      <div class="project__description">
                         <h3 class="project__description--title">View Finder</h3>
@@ -207,6 +207,28 @@
                             <br>HTML5, CSS3, JavaScript</br></p>
                         <div class="project__description--links">
                            <a target="_blank" href="https://movieviewfinder.netlify.app" class="project__description--links">
+                              <i class="fa-solid fa-link"></i>
+                           </a>
+                           <a href="https://www.linkedin.com/in/lance-wooley-a8106a188" target="_blank" class="project__description--links">
+                              <i class="fa-brands fa-linkedin-in"></i>
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+               </li>
+            </ul>
+            <ul class="project__list">
+               <li class="project">
+                  <div class="project__wrapper">
+                     <img src="https://media.istockphoto.com/id/477902875/photo/weather-forecast-on-a-digital-display.jpg?s=1024x1024&w=is&k=20&c=dh6G856Z1WFRE8S-qq_SnO0gR4qVCLcF5ROxxLbm2EI=" class="project__img" alt="">
+                     <div class="project__wrapper--bg"></div>
+                     <div class="project__description">
+                        <h3 class="project__description--title">Weather 102</h3>
+                        <h4 class="project__description--sub-title">Weather App</h4>
+                        <p class="project__description--para">A simple Weather App to find the weather any where in the world.
+                            <br>HTML5, CSS3, JavaScript</br></p>
+                        <div class="project__description--links">
+                           <a target="_blank" href="https://weather102.netlify.app/" class="project__description--links">
                               <i class="fa-solid fa-link"></i>
                            </a>
                            <a href="https://www.linkedin.com/in/lance-wooley-a8106a188" target="_blank" class="project__description--links">
