--- a/index.html
+++ b/index.html
@@ -239,6 +239,28 @@
                   </div>
                </li>
             </ul>
+            <ul class="project__list">
+               <li class="project">
+                  <div class="project__wrapper">
+                     <img src="https://images.ctfassets.net/lzny33ho1g45/O6Ns6DttUzJym7rhGiD36/9affffb4ec5c115b8f742cd34b663cff/best_to_do_apps.jpg?w=1520&fm=jpg&q=30&fit=thumb&h=760" class="project__img" alt="">
+                     <div class="project__wrapper--bg"></div>
+                     <div class="project__description">
+                        <h3 class="project__description--title">Better ToDo APP</h3>
+                        <h4 class="project__description--sub-title">ToDo App</h4>
+                        <p class="project__description--para">Welcome to the Better ToDo APP.
+                            <br>HTML5, CSS3, JavaScript</br></p>
+                        <div class="project__description--links">
+                           <a target="_blank" href="https://bettertodoapp.netlify.app/" class="project__description--links">
+                              <i class="fa-solid fa-link"></i>
+                           </a>
+                           <a href="https://www.linkedin.com/in/lance-wooley-a8106a188" target="_blank" class="project__description--links">
+                              <i class="fa-brands fa-linkedin-in"></i>
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+               </li>
+            </ul>
          </div>
       </div>
    </section>
