fixed mobile issue

--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@
             <ul class="project__list">
                <li class="project">
                   <div class="project__wrapper">
-                     <img src="https://images.ctfassets.net/lzny33ho1g45/O6Ns6DttUzJym7rhGiD36/9affffb4ec5c115b8f742cd34b663cff/best_to_do_apps.jpg?w=1520&fm=jpg&q=30&fit=thumb&h=760" class="project__img" alt="">
+                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3lvo8NepAtzDnJegunenQdA8-5eT38FE8A-JObDl6xw&s" class="project__img" alt="">
                      <div class="project__wrapper--bg"></div>
                      <div class="project__description">
-                        <h3 class="project__description--title">Better ToDo APP</h3>
+                        <h3 class="project__description--title">Better ToDo</h3>
                         <h4 class="project__description--sub-title">ToDo App</h4>
-                        <p class="project__description--para">Welcome to the Better ToDo APP.
+                        <p class="project__description--para">Welcome to the Better ToDo.
                             <br>HTML5, CSS3, JavaScript</br></p>
                         <div class="project__description--links">
                            <a target="_blank" href="https://bettertodoapp.netlify.app/" class="project__description--links">
